# Grafos

./: .gitignore  README.md
Exercícios/Módulo 1/: listaAdjacenciaBia.cpp  matrizAdjParaListaAdj.cpp  matrizAdjParaListaAdjBia.cpp  matrizAdjacenciaBia.cpp  matrizIncidenciaBia.cpp
Exercícios/Módulo 1/Exemplos_Entrada/: Entrada_Adjacencias.txt  (+1 more)
Exercícios/Módulo_1/: CMakeLists.txt  README.md
Exercícios/Módulo_1/docs/html/: functions.html  functions_vars.html  index.html  menudata.js  operations_8hpp_source.html  simulation_8hpp_source.html  structsml_1_1SearchResult-members.html  structsml_1_1SearchResult.html  structsml_1_1SearchResult__coll__graph.dot
Exercícios/Módulo_1/docs/html/search/: all_0.js  all_3.js  searchdata.js  variables_1.js
Exercícios/Módulo_1/docs/latex/: index.tex  operations_8hpp_source.tex  structsml_1_1SearchResult.tex  structsml_1_1SearchResult__coll__graph.dot
Exercícios/Módulo_1/include/: digraph.hpp  graph.hpp  operations.hpp  simulation.hpp
Exercícios/Módulo_1/source/: digraph.cpp  graph.cpp  main.cpp  operations.cpp  simulation.cpp
Implementações/: matrizAdjacencia.cpp  matrizIncidencia.cpp
Projetos/Graph_Simulator/: CMakeLists.txt  README.md
Projetos/Route_in_Graphs/: CMakeLists.txt  README.md  Route_in_Graphs
Projetos/Route_in_Graphs/assets/: entry_1.txt  entry_AGM.txt  entry_caminho_mais_curto.txt  entry_fluxo_maximo.txt
Projetos/Route_in_Graphs/include/: simulation.h
Projetos/Route_in_Graphs/source/: main.cpp  simulation.cpp
Projetos/Route_in_Graphs/source/algorithms/: bellmanFord.cpp  chuLiuEdmonds.cpp  dijkstra.cpp  edmondsKarp.cpp  floydWarshall.cpp  fordFulkerson.cpp  hierholzer.cpp  hierholzerPaths.cpp  kruskal.cpp  prim.cpp
Projetos/Traveling_Salesman_Problem/: CMakeLists.txt  README.md  output.txt
Projetos/Traveling_Salesman_Problem/assets/: Cities_list.txt  Km_matrix.txt  Min_matrix.txt
Projetos/Traveling_Salesman_Problem/include/: simulation.h
Projetos/Traveling_Salesman_Problem/source/: simulation.cpp
Projetos/Traveling_Salesman_Problem/source/algorithms/: grasp.cpp  graspLocalSearch1.cpp  graspLocalSearch2.cpp  linKernighan.cpp  subpathReversion.cpp  swapLocalSearch.cpp  tspBruteForce.cpp  tspCheapestInsertion.cpp  tspGreedy.cpp
(+1 files in other folders)
